--- a/acoBoletos.csproj
+++ b/acoBoletos.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Boleto.Net" Version="2.1.0.803" />
+    <PackageReference Include="Caelum.Stella.CSharp" Version="1.4.7" />
   </ItemGroup>
 
 </Project>
